--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -1,64 +1,21 @@
-name: Daily AI News Update & Deploy
+name: Deploy to GitHub Pages
 
 on:
-  # Run daily at UTC 00:00 (Beijing time 08:00)
-  schedule:
-    - cron: '0 0 * * *'
-  # Allow manual trigger
+  push:
+    branches: [main]
   workflow_dispatch:
-    inputs:
-      target_date:
-        description: 'Target date (YYYY-MM-DD), leave empty for today'
-        required: false
-        default: ''
-      deploy_only:
-        description: 'Deploy only (skip news fetching)'
-        required: false
-        type: boolean
-        default: false
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  fetch-news:
-    if: ${{ github.event.inputs.deploy_only != 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Fetch today's AI news
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          TARGET_DATE: ${{ github.event.inputs.target_date }}
-        run: python scripts/fetch_news.py
-
-      - name: Commit updated data
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add client/public/data/
-          # Only commit if there are changes
-          git diff --staged --quiet || git commit -m "📰 Daily update: $(date -u +%Y-%m-%d) AI news digest"
-          git push
-
   build-and-deploy:
-    if: ${{ always() && !failure() && !cancelled() }}
-    needs: fetch-news
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -66,11 +23,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          ref: main
-
-      - name: Pull latest changes
-        run: git pull origin main
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
