feat: integrate ai-news-bot crawler with daily automation
- Rewrite scripts/fetch_news.py with multi-source crawler
  (newsletters, HN, Reddit, supplementary tech feeds)
- Two-stage LLM pipeline: selection + bilingual summarization
- Automatic deduplication against 7-day history
- Add .github/workflows/daily-news.yml (UTC 15:00 / Seattle 7am)
- Skip update when no new content found
- Output matches existing JSON schema for frontend

Adapted from giftedunicorn/ai-news-bot architecture.

--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,2 +1,3 @@
-# No external dependencies needed - uses only Python stdlib
-# OpenAI API is called via urllib (no openai package required)
+# AI Daily Digest - News Fetcher Dependencies
+# The script uses Python stdlib only (urllib, json, xml.etree, hashlib, etc.)
+# No external packages required.
